# SquirrelVsSquirrel

./: CMakeLists.txt  README.md  server.py
include/: CMakeLists.txt  client.h  commands.h  game.h  graphics.h
src/: CMakeLists.txt  client.c  commands.c  game.c  graphics.c  main.c
